# yolab

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  flake.nix
.github/workflows/: build-iso.yml  deploy-terraform.yml  deploy.yml  docker.yml  main.yml  pre-commit.yml  push.yml
apps/catalog/2fauth/: app.toml  manifest.yaml.j2  schema.json  uischema.json
apps/catalog/appflowy/: app.toml  manifest.yaml.j2  schema.json  uischema.json
apps/catalog/cinny/: app.toml  manifest.yaml.j2  schema.json
apps/catalog/dawarich/: app.toml  manifest.yaml.j2  schema.json  uischema.json  uninstall.yaml.j2
apps/catalog/filebrowser/: app.toml  manifest.yaml.j2  schema.json  uischema.json
apps/catalog/gitea/: app.toml  manifest.yaml.j2  schema.json
apps/catalog/immich/: app.toml  manifest.yaml.j2  outputs.json  schema.json  uischema.json
apps/catalog/jellyfin/: app.toml  manifest.yaml.j2  schema.json
apps/catalog/librespeed/: app.toml  manifest.yaml.j2  schema.json  uischema.json
apps/catalog/minecraft/: app.toml  manifest.yaml.j2  outputs.json  schema.json  uninstall.yaml.j2
apps/catalog/ntfy/: app.toml  manifest.yaml.j2  schema.json
apps/catalog/open-webui/: app.toml  manifest.yaml.j2  schema.json  uischema.json
apps/catalog/reactive-resume/: app.toml  manifest.yaml.j2  schema.json
apps/catalog/strfry/: app.toml  manifest.yaml.j2  schema.json  uninstall.yaml.j2
apps/catalog/synapse/: app.toml  (+2 more)
apps/wg-register/: Dockerfile  setup.sh
apps/wg-sidecar/: Dockerfile  entrypoint.sh
backend/: .env  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  106c343e96c7_.py  22dde5817298_initial_migration_with_sqlmodel.py  25adf160268f_initial_schema.py  2600bb567c83_added_account_table.py  7be337326cae_.py  a1b2c3d4e5f6_ipv6_only_simplified.py  a26048365ab2_ok.py  add_ipv6_counter_table.py  b99b8db45565_.py  c10f9da35509_new_counter_mechanism.py  c3d4e5f6a7b8_wireguard.py  d9e29b504b79_.py  dc745c552096_add_web_service_type.py
backend/backend/: database.py  main.py  models.py  schemas.py  settings.py  utils.py
backend/backend/routes/: internal.py  plugin.py  services.py  stats.py  templates.py  tokens.py  users.py
backend/services/librespeed/: docker-compose.yml
backend/services/react-resume/: docker-compose.yml
client_test/librespeed_test/: docker-compose.yml  privatekey  publickey  wg0.conf  wg0.conf.example
client_test/librespeed_test_2/: Caddyfile  docker-compose.yml  privatekey  publickey  wg0.conf
config/: frps.ini  frps.ini.template
deployment/: CONFIG.md  DEPLOY.md  TWO_SERVER_DEPLOYMENT.md
deployment/nixos/: all-in-one.nix  disk-config.nix  frps-server.nix  services-stack.nix  wireguard-server.nix
deployment/scripts/: check-health.sh  deploy-all-in-one.sh  deploy.sh  destroy.sh
deployment/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
dns_server/: Dockerfile  pyproject.toml
dns_server/dns_server/: main.py
frps/: Dockerfile  frps.ini
homelab/: .gitignore  .pre-commit-config.yaml  README.md  builds.nix  ci-config.toml  configuration.nix  disk-config.nix  dr-restore.sh  flake.nix  shared.nix
homelab/client-ui/: .gitignore  .pre-commit-config.yaml  BUILD.md  README.md  dev.sh  index.html  package-lock.json  package.json
homelab/client-ui/backend/: .env.example  backend.py  pyproject.toml
homelab/client-ui/backend/backend/: backend.py  cli.py  functions.py
homelab/darwin/: configuration.nix  lima-k3s.yaml
homelab/ignored/: config.toml.example
homelab/installer/: README.md  iso-config.nix  service.py
homelab/installer/backend/: .gitignore  main.py  pyproject.toml  service.py
homelab/installer/backend/backend/: cli.py  display.py  functions.py  install_flow.py  interactive.py  main.py
homelab/local-api/: .pre-commit-config.yaml  Cargo.toml  pyproject.toml
homelab/local-api/local_api/: apps.py  auth.py  config.py  constants.py  disks.py  health.py  kubectl.py  main.py  nfs.py  priority.py  queue.py  settings.py
homelab/local-api/local_api/models/: apps.py  ceph.py  disk.py  nodes.py  status.py
homelab/local-api/local_api/routers/: apps.py  ceph.py  disks.py  nodes.py  rebuild.py  status.py  terminal.py  update.py
homelab/local-api/local_api/routes/: __init__.py  health.py  info.py  k3s.py  nfs.py
homelab/local-api/src/: auth.rs  config.rs  error.rs  kubectl.rs  loop_osd.rs  main.rs  priority.rs  proc.rs
homelab/local-api/src/routers/: apps.rs  backups.rs  ceph.rs  disks.rs  mod.rs  nodes.rs  rebuild.rs  status.rs  terminal.rs  update.rs  virtual_disk.rs
homelab/modules/: frpc.nix  homelab-setup.nix
homelab/nixos/: common.nix  config.toml.example  configuration.nix  disk-config.nix  wsl.nix
installer/: iso-config.nix  pyproject.toml
installer/installer/: cli.py  functions.py  install_flow.py  interactive.py  tunnel.py  validators.py
installer/macos/: install.sh  setup.py
installer/nixos/: .pre-commit-config.yaml  iso-config.nix
installer/nixos/backend/: pyproject.toml
installer/nixos/backend-rs/: Cargo.toml
installer/nixos/backend-rs/src/: app.rs  install.rs  main.rs  ui.rs  wireguard.rs
installer/nixos/backend/installer/: cli.py  display.py  install_flow.py  interactive.py  pairing.py  password.py  system.py  web_ui.py  wireguard_live.py
installer/windows/: install.ps1
librespeed_test/: docker-compose.yml  frpc.ini  wg0.conf
nftables-manager/: pyproject.toml
nftables-manager/nftables_manager/: main.py  manager.py
nftables_manager/: manager.py  pyproject.toml
nftables_manager/nftables_manager/: manager.py
node-agent/: csi.proto  pyproject.toml
node-agent/node_agent/: config.py  disks.py  health.py  k3s.py  main.py  mergerfs.py
node-agent/node_agent/csi/: csi_pb2.py  csi_pb2_grpc.py  generate_protos.sh  server.py
node-agent/node_agent/routes/: disks.py  info.py  k3s.py  nfs.py  volumes.py
wg-sidecar/: Dockerfile  entrypoint.sh
wireguard-manager/: pyproject.toml
wireguard-manager/wireguard_manager/: manager.py
(+98 files in other folders)
