[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "FRP IPv6 Tunneling Service - Registration API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "pydantic[email]>=2.5.0",
  "pydantic-settings>=2.1.0",
  "sqlmodel>=0.0.14",
  "sqlalchemy>=2.0.23",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.12.1",
  "python-dotenv>=1.0.0",
  "pre-commit>=4.5.1",
  "devtools>=0.12.2",
  "ruff>=0.14.14",
  "ty>=0.0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
