[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wireguard-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
wireguard-manager = "wireguard_manager.manager:main"

[tool.hatch.build.targets.wheel]
packages = ["wireguard_manager"]
