[package]
name = "local-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "local-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
tera = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["full"] }
async-stream = "0.3"
pwhash = "1"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tempfile = "3"
hostname = "0.4"
time = "0.3"
