[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
]

[project.scripts]
local-api = "local_api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["local_api"]
