[project]
name = "backend"
version = "0.1.0"
description = "YoLab Client Management UI Backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.12.0",
  "tomli-w>=1.0.0",
  "rich>=13.0.0",
]

[dependency-groups]
dev = ["ruff>=0.14.14", "ty>=0.0.13"]
