[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelab-installer"
version = "1.0.0"
description = "YoLab Homelab Installer Backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.4.0",
]

[dependency-groups]
dev = ["ruff>=0.14.14", "ty>=0.0.13"]
