[project]
name = "backend"
version = "1.0.0"
description = "YoLab Homelab Installer Backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.4.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.13",
]
