[project]
name = "backend"
version = "1.0.0"
description = "YoLab Homelab Installer Backend"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "questionary>=2.0.0",
  "tomli-w>=1.0.0",
]

[project.scripts]
yolab-installer = "backend.cli:cli"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.13",
]
