[package]
name = "yolab-installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yolab-installer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
pwhash = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
