[project]
name = "installer"
version = "1.0.0"
description = "YoLab Homelab Installer"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "tomli-w>=1.0.0",
  "httpx>=0.27.0",
  "qrcode>=7.4.2",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.scripts]
yolab-installer = "installer.cli:cli"

[dependency-groups]
dev = ["ruff>=0.14.14", "ty>=0.0.13"]
